// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input > snapshots > render with defaultValue 1`] = `
<body>
  <div>
    <fieldset
      class="component classes here"
      data-testid="xInput"
    >
      <label
        class="label classes here"
        data-testid="xInput-label"
        for="test"
      >
        Test
      </label>
      <input
        class="input classes here"
        data-testid="xInput-input"
        name="test"
        placeholder="Test"
        type="text"
        value="foo"
      />
    </fieldset>
  </div>
</body>
`;

exports[`Input > snapshots > render with defaults 1`] = `
<body>
  <div>
    <fieldset
      class="component classes here"
      data-testid="xInput"
    >
      <label
        class="label classes here"
        data-testid="xInput-label"
        for="test"
      >
        Test
      </label>
      <input
        class="input classes here"
        data-testid="xInput-input"
        name="test"
        placeholder="Test"
        type="text"
        value=""
      />
    </fieldset>
  </div>
</body>
`;

exports[`Input > snapshots > render with props 1`] = `
<body>
  <div>
    <fieldset
      class="component classes here test class"
      data-testid="xInput"
    >
      <label
        class="label classes here"
        data-testid="xInput-label"
        for="test"
      >
        Test
      </label>
      <input
        class="input classes here"
        data-testid="xInput-input"
        name="test"
        placeholder="Test"
        type="number"
        value=""
      />
    </fieldset>
  </div>
</body>
`;
